# testgres

./: .coveragerc  .dockerignore  .gitignore  .pypirc  .style.yapf  .travis.yml  Dockerfile--alpine.tmpl  Dockerfile--altlinux_10.tmpl  Dockerfile--altlinux_11.tmpl  Dockerfile--astralinux_1_7.tmpl  Dockerfile--rockylinux_10.tmpl  Dockerfile--rockylinux_8.tmpl  Dockerfile--rockylinux_9.tmpl  Dockerfile--std-all.tmpl  Dockerfile--std.all.tmpl  Dockerfile--std.tmpl  Dockerfile--std2-all.tmpl  Dockerfile--std_all.tmpl  Dockerfile--ubuntu-24_04  Dockerfile--ubuntu-24_04.tmpl  Dockerfile--ubuntu_24_04.tmpl  Dockerfile--ubuntu_26_04.tmpl  Dockerfile.tmpl  LICENSE  MANIFEST  MANIFEST.in  README.md  __init__.py  codecov.yml  create_py_env.sh  docker-compose.yml  genindex.html  index.html  init_test_env.sh  mk_dockerfile.sh  objects.inv  publish_package.sh  py-modindex.html  pyproject.toml  pytest.ini  (+10 more)
.github/workflows/: ci.yml  package-verification.yml  python-publish.yml  python-verification.yml
_static/: documentation_options.js
docs/: Makefile  README.md  update_docs.sh
docs/source/: conf.py  index.rst  modules.rst  testgres.rst
hooks/: README.md  install.sh  pre-commit
pg_probackup2/: app.py
pg_probackup2/tests/: test_basic.py
src/: __init__.py  api.py  backup.py  cache.py  config.py  connection.py  defaults.py  enums.py  exceptions.py  logger.py  node.py  node_app.py  port_manager.py  pubsub.py  raise_error.py  utils.py
src/impl/: file_line_reader.py  internal_utils.py  port_manager__generic.py  port_manager__generic2.py  port_manager__this_host.py
src/operations/: helpers.py  os_ops.py
src/plugins/: __init__.py
testgres/: __init__.py  api.py  backup.py  cache.py  config.py  connection.py  consts.py  decorators.py  defaults.py  enums.py  exceptions.py  gdb.py  logger.py  node.py  node_app.py  node_base.py  os_ops.py  port_manager.py  probackup.py  pubsub.py  standby.py  temp.py  testgres.py  utils.py
testgres/helpers/: port_manager.py  raise_error.py
tests/: README.md  conftest.py  requirements.txt  test_api.py  test_config.py  test_conftest.py--devel  test_local.py  test_os_ops_common.py  test_os_ops_local.py  test_os_ops_remote.py  test_pgdump.py  test_raise_error.py  test_remote.py  test_simple.py  test_simple_remote.py  test_testgres_common.py  test_testgres_local.py  test_testgres_remote.py  test_utils.py
(+52 files in other folders)
