[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"testgres" = "src"

[tool.flake8]
extend-ignore = ["E501"]
exclude = [".git", "__pycache__", "env", "venv"]

[project]
name = "testgres"
version = "1.13.4"

description = "Testing utility for PostgreSQL and its extensions"
readme = "README.md"

# [2026-01-05]
#  This old format is used to ensure compatibility with Python 3.7.
license = {text = "PostgreSQL"}

authors = [
    {name = "Postgres Professional", email = "testgres@postgrespro.ru"},
]

keywords = [
    'test',
    'testing',
    'postgresql',
]

requires-python = ">=3.7.3"

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pg8000",
    "port-for>=0.4",
    "six>=1.9.0",
    "psutil",
    "packaging",
    "testgres.os_ops>=2.0.2,<3.0.0",
]

[project.urls]
"HomePage" = "https://github.com/postgrespro/testgres"
